@@ -29,160 +29,160 @@ import java.util.stream.Stream;
 
 public class NestedObjectFieldTest {
 
-    private static final ObjectFieldFactory FACTORY = new ObjectFieldFactory();
-    private static final Logger LOGGER = LoggerFactory.getLogger(NestedObjectFieldTest.class);
+  private static final ObjectFieldFactory FACTORY = new ObjectFieldFactory();
+  private static final Logger LOGGER = LoggerFactory.getLogger(NestedObjectFieldTest.class);
 
-    @BeforeClass
-    public static void setupFactory() {
-        FACTORY.registerInstanceProvider(DataObject.class, DataObject::new);
-    }
+  @BeforeClass
+  public static void setupFactory() {
+    FACTORY.registerInstanceProvider(DataObject.class, DataObject::new);
+  }
 
-    private ObjectField<NestedObject> field;
-    private int eventCounter = 0;
+  private ObjectField<NestedObject> field;
+  private int eventCounter = 0;
 
-    @Before
-    public void setup() {
-        MockVaadin.setup();
-        this.eventCounter = 0;
-        this.field = FACTORY.buildAndConfigureObjectField(NestedObject.class, NestedObject::new);
-    }
+  @Before
+  public void setup() {
+    MockVaadin.setup();
+    this.eventCounter = 0;
+    this.field = FACTORY.buildAndConfigureObjectField(NestedObject.class, NestedObject::new);
+  }
 
-    @After
-    public void tearDown() {
-        MockVaadin.tearDown();
-    }
+  @After
+  public void tearDown() {
+    MockVaadin.tearDown();
+  }
 
-    @Test
-    public void testInitialisedProperly() {
-        // this field is repainted
-        Assert.assertFalse(this.field.getPropertiesAndComponents().isEmpty());
-        Assert.assertFalse(this.field.getGroupLayouts().isEmpty());
-        Assert.assertFalse(this.field.getComponentsNotInGroups().isEmpty());
-    }
+  @Test
+  public void testInitialisedProperly() {
+    // this field is repainted
+    Assert.assertFalse(this.field.getPropertiesAndComponents().isEmpty());
+    Assert.assertFalse(this.field.getGroupLayouts().isEmpty());
+    Assert.assertFalse(this.field.getComponentsNotInGroups().isEmpty());
+  }
 
-    @Test
-    public void testCollectionFieldRenderedProperly() {
-        final NestedObject nestedObject = new NestedObject();
-        final List<String> stringList = Arrays.asList("trolling", "is", "a", "art");
-        nestedObject.setTexts(stringList);
+  @Test
+  public void testCollectionFieldRenderedProperly() {
+    final NestedObject nestedObject = new NestedObject();
+    final List<String> stringList = Arrays.asList("trolling", "is", "a", "art");
+    nestedObject.setTexts(stringList);
 
-        this.field.setValue(nestedObject);
-        final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
-        final HasValue<?, ?> collectionField = map.keySet().stream().filter(def -> "texts".equals(def.getName())).map(map::get).findFirst().orElse(null);
-        Assert.assertTrue(collectionField instanceof CollectionField);
-        Assert.assertEquals(stringList, collectionField.getValue());
-        final List<Component> listComponents = ((CollectionField<?, ?>) collectionField).getChildren().findFirst().orElseGet(FlexLayoutHelpers::column).getChildren().collect(Collectors.toList());
-        Assert.assertEquals(stringList.size(), listComponents.size());
-        for(int zmp1 = 0; zmp1<stringList.size(); zmp1++)
-            Assert.assertTrue(listComponents.get(zmp1) instanceof SuperTextField && Objects.equals(stringList.get(zmp1), ((SuperTextField) listComponents.get(zmp1)).getValue()));
-    }
+    this.field.setValue(nestedObject);
+    final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
+    final HasValue<?, ?> collectionField = map.keySet().stream().filter(def -> "texts".equals(def.getName())).map(map::get).findFirst().orElse(null);
+    Assert.assertTrue(collectionField instanceof CollectionField);
+    Assert.assertEquals(stringList, collectionField.getValue());
+    final List<Component> listComponents = ((CollectionField<?, ?>) collectionField).getChildren().findFirst().orElseGet(FlexLayoutHelpers::column).getChildren().toList();
+    Assert.assertEquals(stringList.size(), listComponents.size());
+    for (int zmp1 = 0; zmp1 < stringList.size(); zmp1++)
+      Assert.assertTrue(listComponents.get(zmp1) instanceof SuperTextField && Objects.equals(stringList.get(zmp1), ((SuperTextField) listComponents.get(zmp1)).getValue()));
+  }
 
-    @Test
-    public void testDataObjectFieldIsObjectField() {
-        final DataObject dataObject = DataObject.build();
-        final NestedObject nestedObject = new NestedObject();
-        nestedObject.setDataObject(dataObject);
+  @Test
+  public void testDataObjectFieldIsObjectField() {
+    final DataObject dataObject = DataObject.build();
+    final NestedObject nestedObject = new NestedObject();
+    nestedObject.setDataObject(dataObject);
 
-        this.field.setValue(nestedObject);
+    this.field.setValue(nestedObject);
 
-        final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
-        final HasValue<?, ?> objectField = map.keySet().stream().filter(def -> "dataObject".equals(def.getName())).map(map::get).findFirst().orElse(null);
+    final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
+    final HasValue<?, ?> objectField = map.keySet().stream().filter(def -> "dataObject".equals(def.getName())).map(map::get).findFirst().orElse(null);
 
-        Assert.assertNotNull(objectField);
-        Assert.assertTrue("ObjectField should be returned, not "+objectField.getClass().getSimpleName(), objectField instanceof ObjectField);
-        Assert.assertEquals(DataObject.class, ((ObjectField<?>) objectField).getDataType());
-        Assert.assertEquals(dataObject, objectField.getValue());
-        // all properties from data object should be present
-        Assert.assertEquals(DataObjectConfiguration.EXPECTED_FIELDS.size(), ((ObjectField<?>) objectField).getPropertiesAndComponents().size());
-    }
+    Assert.assertNotNull(objectField);
+    Assert.assertTrue("ObjectField should be returned, not " + objectField.getClass().getSimpleName(), objectField instanceof ObjectField);
+    Assert.assertEquals(DataObject.class, ((ObjectField<?>) objectField).getDataType());
+    Assert.assertEquals(dataObject, objectField.getValue());
+    // all properties from data object should be present
+    Assert.assertEquals(DataObjectConfiguration.EXPECTED_FIELDS.size(), ((ObjectField<?>) objectField).getPropertiesAndComponents().size());
+  }
 
-    @Test
-    @SuppressWarnings("unchecked")
-    public void testObjectsFieldIsCollectionField() {
-        final DataObject dataObject = DataObject.build();
-        final NestedObject nestedObject = new NestedObject();
-        nestedObject.setObjects(List.of(dataObject));
+  @Test
+  @SuppressWarnings("unchecked")
+  public void testObjectsFieldIsCollectionField() {
+    final DataObject dataObject = DataObject.build();
+    final NestedObject nestedObject = new NestedObject();
+    nestedObject.setObjects(List.of(dataObject));
 
-        this.field.setValue(nestedObject);
+    this.field.setValue(nestedObject);
 
-        final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
-        final HasValue<?, ?> collectionField = map.keySet().stream().filter(def -> "objects".equals(def.getName())).map(map::get).findFirst().orElse(null);
+    final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
+    final HasValue<?, ?> collectionField = map.keySet().stream().filter(def -> "objects".equals(def.getName())).map(map::get).findFirst().orElse(null);
 
-        Assert.assertNotNull(collectionField);
-        Assert.assertTrue("CollectionField should be returned, not "+collectionField.getClass().getSimpleName(), collectionField instanceof CollectionField);
-        Assert.assertEquals(nestedObject.getObjects(), collectionField.getValue());
-        Assert.assertEquals(1, ((CollectionController)collectionField).size());
+    Assert.assertNotNull(collectionField);
+    Assert.assertTrue("CollectionField should be returned, not " + collectionField.getClass().getSimpleName(), collectionField instanceof CollectionField);
+    Assert.assertEquals(nestedObject.getObjects(), collectionField.getValue());
+    Assert.assertEquals(1, ((CollectionController) collectionField).size());
 
-        LOGGER.info("about to add a new element to the list");
+    LOGGER.info("about to add a new element to the list");
 
-        this.field.addValueChangeListener(event -> eventCounter++);
-        // now also ensure events are fired properly when things are added
-        ((CollectionField<?, ?>) collectionField).add();
-        Assert.assertEquals(1, eventCounter);
-        // make sure the thing is really added
-        Assert.assertEquals(2, this.field.getValue().getObjects().size());
+    this.field.addValueChangeListener(event -> eventCounter++);
+    // now also ensure events are fired properly when things are added
+    ((CollectionField<?, ?>) collectionField).add();
+    Assert.assertEquals(1, eventCounter);
+    // make sure the thing is really added
+    Assert.assertEquals(2, this.field.getValue().getObjects().size());
 
-        // and when things are modified
-        // component structure: (ObjectField of NestedObject -> layout -> ) CollectionField of DataObjects -> layout -> ObjectField of DataObject -> layout -> individual components
-        final ObjectField<DataObject> objectField = (ObjectField<DataObject>) ((CollectionField<?, ?>) collectionField).getChildren().findFirst().map(layout -> layout.getChildren().toArray()[1]).orElseThrow(IllegalStateException::new);
-        final Map<Property<DataObject, ?>, HasValue<?, ?>> nestedMap = objectField.getPropertiesAndComponents();
-        final HasValue<?, String> nestedTextField = (HasValue<?, String>) nestedMap.keySet().stream().filter(def -> Objects.equals("text", def.getName())).map(nestedMap::get).findFirst().orElse(null);
-        Assert.assertNotNull(nestedTextField);
-        // that field should be empty
-        Assert.assertEquals("", nestedTextField.getValue());
-        // change its value
-        final String elaborateValue = "oh hello, I just modified the text!";
-        LOGGER.info("about to modify text");
-        nestedTextField.setValue(elaborateValue);
+    // and when things are modified
+    // component structure: (ObjectField of NestedObject -> layout -> ) CollectionField of DataObjects -> layout -> ObjectField of DataObject -> layout -> individual components
+    final ObjectField<DataObject> objectField = (ObjectField<DataObject>) ((CollectionField<?, ?>) collectionField).getChildren().findFirst().map(layout -> layout.getChildren().toArray()[1]).orElseThrow(IllegalStateException::new);
+    final Map<Property<DataObject, ?>, HasValue<?, ?>> nestedMap = objectField.getPropertiesAndComponents();
+    final HasValue<?, String> nestedTextField = (HasValue<?, String>) nestedMap.keySet().stream().filter(def -> Objects.equals("text", def.getName())).map(nestedMap::get).findFirst().orElse(null);
+    Assert.assertNotNull(nestedTextField);
+    // that field should be empty
+    Assert.assertEquals("", nestedTextField.getValue());
+    // change its value
+    final String elaborateValue = "oh hello, I just modified the text!";
+    LOGGER.info("about to modify text");
+    nestedTextField.setValue(elaborateValue);
 
-        Assert.assertEquals(2, eventCounter);
-        Assert.assertEquals(elaborateValue, this.field.getValue().getObjects().get(1).getText());
-    }
+    Assert.assertEquals(2, eventCounter);
+    Assert.assertEquals(elaborateValue, this.field.getValue().getObjects().get(1).getText());
+  }
 
-    @Test
-    public void testMapFieldIsCorrect() {
-        final Map<String, DataObject> dataObjectMap = Stream.of("hello", "world").collect(Collectors.toMap(Function.identity(), s -> DataObject.build()));
-        final NestedObject nestedObject = new NestedObject();
-        nestedObject.setObjectMap(dataObjectMap);
+  @Test
+  public void testMapFieldIsCorrect() {
+    final Map<String, DataObject> dataObjectMap = Stream.of("hello", "world").collect(Collectors.toMap(Function.identity(), s -> DataObject.build()));
+    final NestedObject nestedObject = new NestedObject();
+    nestedObject.setObjectMap(dataObjectMap);
 
-        this.field.setValue(nestedObject);
+    this.field.setValue(nestedObject);
 
-        final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
-        final HasValue<?, ?> mapField = map.keySet().stream().filter(def -> "objectMap".equals(def.getName())).map(map::get).findFirst().orElse(null);
+    final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
+    final HasValue<?, ?> mapField = map.keySet().stream().filter(def -> "objectMap".equals(def.getName())).map(map::get).findFirst().orElse(null);
 
-        Assert.assertNotNull(mapField);
-        Assert.assertTrue("MapField should be returned, not "+mapField.getClass().getSimpleName(), mapField instanceof MapField);
-        Assert.assertEquals(dataObjectMap, mapField.getValue());
-    }
+    Assert.assertNotNull(mapField);
+    Assert.assertTrue("MapField should be returned, not " + mapField.getClass().getSimpleName(), mapField instanceof MapField);
+    Assert.assertEquals(dataObjectMap, mapField.getValue());
+  }
 
-    @Test
-    public void testFieldsRenderedAsExplicitlyRequested() {
-        final NestedObject nestedObject = new NestedObject();
-        nestedObject.setNumber(123);
-        nestedObject.setText("hello, world");
+  @Test
+  public void testFieldsRenderedAsExplicitlyRequested() {
+    final NestedObject nestedObject = new NestedObject();
+    nestedObject.setNumber(123);
+    nestedObject.setText("hello, world");
 
-        this.field.setValue(nestedObject);
+    this.field.setValue(nestedObject);
 
-        final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
-        final HasValue<?, ?> numberField = map.keySet().stream().filter(def -> "number".equals(def.getName())).map(map::get).findFirst().orElse(null);
+    final Map<Property<NestedObject, ?>, HasValue<?, ?>> map = this.field.getPropertiesAndComponents();
+    final HasValue<?, ?> numberField = map.keySet().stream().filter(def -> "number".equals(def.getName())).map(map::get).findFirst().orElse(null);
 
-        Assert.assertNotNull(numberField);
-        Assert.assertTrue("LabelField should be returned, not "+numberField.getClass().getSimpleName(), numberField instanceof LabelField);
-        Assert.assertEquals(nestedObject.getNumber(), numberField.getValue());
+    Assert.assertNotNull(numberField);
+    Assert.assertTrue("LabelField should be returned, not " + numberField.getClass().getSimpleName(), numberField instanceof LabelField);
+    Assert.assertEquals(nestedObject.getNumber(), numberField.getValue());
 
-        final HasValue<?, ?> textField = map.keySet().stream().filter(def -> "text".equals(def.getName())).map(map::get).findFirst().orElse(null);
+    final HasValue<?, ?> textField = map.keySet().stream().filter(def -> "text".equals(def.getName())).map(map::get).findFirst().orElse(null);
 
-        Assert.assertNotNull(textField);
-        Assert.assertSame("TextField should be returned, not "+textField.getClass().getSimpleName(), TextField.class, textField.getClass());
-        Assert.assertEquals(nestedObject.getText(), textField.getValue());
-        Assert.assertEquals(TextFieldBuilder.TITLE_TEXT, ((TextField)textField).getTitle());
+    Assert.assertNotNull(textField);
+    Assert.assertSame("TextField should be returned, not " + textField.getClass().getSimpleName(), TextField.class, textField.getClass());
+    Assert.assertEquals(nestedObject.getText(), textField.getValue());
+    Assert.assertEquals(TextFieldBuilder.TITLE_TEXT, ((TextField) textField).getTitle());
 
-        this.field.addValueChangeListener(event -> eventCounter++);
-        ((TextField)textField).setValue("New value!");
-        Assert.assertEquals(1, eventCounter);
-        final NestedObject newValue = this.field.getValue();
-        Assert.assertNotEquals(nestedObject, newValue);
-        Assert.assertEquals(textField.getValue(), newValue.getText());
-    }
+    this.field.addValueChangeListener(event -> eventCounter++);
+    ((TextField) textField).setValue("New value!");
+    Assert.assertEquals(1, eventCounter);
+    final NestedObject newValue = this.field.getValue();
+    Assert.assertNotEquals(nestedObject, newValue);
+    Assert.assertEquals(textField.getValue(), newValue.getText());
+  }
 
 }
